# cppbackend

./: .gitignore
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  model.h  request_handler.cpp  request_handler.h  url_parser.h
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp  request_handler.h  (+1 more)
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  udp_client  udp_client.cpp  udp_server
sprint2/problems/command_line/solution/: CMakeLists.txt  docker-compose.yaml
sprint2/problems/join_game/solution/: .clang-uml  CMakeLists.txt
sprint2/problems/logger/solution/: CMakeLists.txt  my_logger.cpp  my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile  bt.txt
sprint3/problems/find_return/solution/: README.md  code.txt
sprint3/problems/gen_objects/solution/: .clang-uml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
sprint3/problems/scores/solution/: docker-compose.yaml
sprint4/problems/leave_game/solution/: CMakeLists.txt  mac_os_build.sh  run.sh  server_state.txt
sprint4/problems/leave_game/solution/src/: application.cpp  application.h  command_line_parser.h  extra_data.h  geom.h  http_server.cpp  infrastructure.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  model_serialization.cpp  model_serialization.h  player.h  request_handler.cpp  request_handler.h  serializing_listener.cpp  serializing_listener.h  server_state.txt
(+120 files in other folders)
